--- a/apps/mibao-ui-docs/src/index.html
+++ b/apps/mibao-ui-docs/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MibaoUiDocs</title>
+    <title>Mibao UI Docs</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
